--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 * { margin: 0; padding: 0; outline: none; }
 a { color: #FFF; cursor: pointer; text-decoration: none; }
-body { font-family: 'Roboto', sans-serif; }
+body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif }
 
 .row,.fluid {
     display: flex;
@@ -93,12 +93,7 @@ body { font-family: 'Roboto', sans-serif; }
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.3);
 }
 
-@media only screen and (min-width:1440px) {
-    .content {
-        padding: 0 20%;
-        padding-top: 60px;
-    }
-} @media only screen and (max-width:1000px) {
+@media only screen and (max-width:1000px) {
     .toggle {
         display: flex;
     } .itens {
@@ -184,7 +179,7 @@ body { font-family: 'Roboto', sans-serif; }
 } .text-red {
     color: #F55;
 } .text-orange {
-    color: #F80;
+    color: #F70;
 } .text-purple {
     color: #A3E;
 } .text-black {
